Fix 18h duty to allow lunch and dinner again

--- a/meals/templates/meals/meal_form.html
+++ b/meals/templates/meals/meal_form.html
@@ -246,7 +246,7 @@ select:focus {
 
     const rules = {
       "24h": ["breakfast", "lunch", "dinner"],
-      "18h": ["breakfast", "lunch", "dinner"],
+      "18h": [ "lunch", "dinner"],
       "12h_day": ["breakfast", "lunch"],
       "12h_night": ["dinner"],
       "8h_morning": ["breakfast"],
